welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:4: error: not found: value estSurCaseBlanche
      if (!estSurCaseBlanche()) {
           ^