welcome.lessons.welcome.methods.picture.PictureMono1.scala.code
def faireV() {
  for (i<-1 to 4) {
    for (j<-3 to 5) {
      if (!estSurCaseBlanche()) {
        baisseBrosse();
      }else {
        leveBrosse();
      }
    }
  }
}
override def run() {
}